@@ -12,6 +12,7 @@
 	fixed very tricky bug with constraint parameters used together with polymorphic methods
 	added selective import (import x.y.Class.InnerType)
 	added optional enum constructor parameters
+	added opened anonymous types (no more Unknown has no field...)
 	
 2006-06-08: 1.02
 	fixed stack overflow when recursive class <: recursive signature
